# CLoTH-Gossip

./: .gitignore  CMakeLists.txt  DEFENSE_COMPARISON_RESULTS.md  DETECTION_AVOIDANCE_ANALYSIS.md  EXTREME_ATTACK_ANALYSIS.md  FINAL_STAGE4_ANALYSIS.md  IMPLEMENTATION_STATUS.md  Makefile  README.md  VERIFICATION_STRATEGY.md  analyze_detection_gaps.py  analyze_scenarios.py  cloth_input.txt  cloth_input.txt.bak  groups_output.csv  payments_output.csv  run-simulation.sh  run_all_simulations_change_feelim.sh  run_all_simulations_change_groupparams.sh  run_all_simulations_change_pmtamt.sh  run_monitor_sweep.sh  run_quick_test.sh  run_routing_demo.sh  test_detection_comparison.sh  test_extreme_attack.sh  test_extreme_attack_comparison.sh  test_final_comparison.sh  test_stage4.sh  test_with_without_detection.sh  visualize_results.py
.github/: copilot-instructions.md
.run/: CLoTH_Gossip.run.xml
Python/make_network_files/: make_files.py  make_network_files.py  make_network_files_pickx.py  make_network_files_random.py  make_network_filesv2.py  network_pick_neighborstopx.py
Python/network_analysis/: network_analysis.py  network_histogram.py  (+3 more)
batch-tools/: run_all_simulations_change_attackintensity.sh  run_all_simulations_change_feelim.sh  run_all_simulations_change_groupparams.sh  run_all_simulations_change_pmtamt.sh  run_all_simulations_detection_defense.sh
config/: cloth_input.txt  cloth_input_research.txt
include/: routing.h
omnetpp_sim/: .project  README.md  omnetpp.ini
repro_out_fig/: cloth_sim_viz_app.py  make_sim_viz2.py  run_viz_app.sh
scripts/: analyze_output.py  measure_payment_time.sh  payment_delay_simmer.R  plot_attack_summary.py  simple_live_view.py  summarize_attack4.py  summarize_attack_by_detected.py
test_sim/: cloth_input.txt  payments.csv
(+32 files in other folders)
